--- a/front/src/css/components/header/contact.css
+++ b/front/src/css/components/header/contact.css
@@ -1,25 +1,19 @@
 /* Estilos para el CartContainer */
-.cartContainer {
+.contactContainer {
     position: fixed;
-    top: -2px; /* Se ajusta para que quede justo debajo del header */
     right: 0;
+    top: 0;
     width: 50%;
-    height: calc(100vh - 54px);
-    background-color: #f0f0f0; /* Fondo gris claro */
-    color: #333; /* Texto en gris oscuro */
-    padding: 2rem;
+    height: 100%;
+    background-color: white; /* Fondo blanco grisáceo */
+    color: #333; /* Texto en tono gris oscuro */
+    
     z-index: 1001;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
     gap: 1.5rem;
-    box-shadow: -2px 0 8px rgba(0, 0, 0, 0.1); /* Sombra ligera */
-}
-
-/* Estilo para la animación de activación */
-.cartContainer.active {
-    animation: slideInVertical 0.3s ease forwards;
+    box-shadow: -2px 0 8px rgba(0, 0, 0, 0.1); /* Sombra ligera para dar profundidad */
 }
 
 /* Botón para cerrar el carrito */
@@ -35,14 +29,14 @@
 }
 
 /* Estilos para la lista de productos (puedes ajustar o eliminar esto si no es necesario) */
-.cartContainer ul {
+.contactContainer ul {
     list-style: none;
     padding: 0;
     width: 100%;
 }
 
 /* Estilo para el botón de eliminar (opcional, según necesites) */
-.cartContainer .cart-item button {
+.contactContainer .cart-item button {
     background-color: #333;
     color: #fff;
     border: none;
@@ -52,7 +46,78 @@
     transition: background-color 0.3s ease;
 }
 
-/* Efecto hover en el botón de eliminar */
-.cartContainer .cart-item button:hover {
+/* Estilo para los elementos de contacto */
+.headerContactContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+
+.borderContact {
+    border-bottom: 1px solid black;
+    width: 100%;
+    padding-bottom: 2rem;
+
+}
+
+.contactList {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+}
+
+.contactItem {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    margin: 0.5rem 0;
+    padding-left: 6.5rem;
+}
+
+.contactItem a {
+    text-decoration: none;
+    color: black;
+}
+
+.contactItem span {
+    color: black;
+    
+}
+
+.formContainer {
+    padding-top: 1rem;
+    width: 80%;
+}
+
+.formContainer form{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.formContainer input,
+.formContainer textarea {
+    width: 100%;
+    margin: 0.5rem 0;
+    padding: 0.5rem;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+.formContainer button {
+    background-color: #333;
+    color: #fff;
+    border: none;
+    padding: 0.5rem 1rem;
+    margin-top: 1rem;
+    cursor: pointer;
+    width: 102%;
+    transition: background-color 0.3s ease;
+}
+
+/* Efecto hover en el botón de enviar */
+.formContainer button:hover {
     background-color: #000; /* Cambia a negro en el hover */
 }
