--- a/front/src/css/components/header/favourite.css
+++ b/front/src/css/components/header/favourite.css
@@ -49,7 +49,7 @@
 }
 
 .favouriteItem:hover {
-    background-color: #f0f0f0; /* Cambio de fondo al hacer hover */
+    background-color: white; /* Cambio de fondo al hacer hover */
 }
 
 .favouriteItem h3 {
