--- a/front/src/css/pages/emailsignin.css
+++ b/front/src/css/pages/emailsignin.css
@@ -2,7 +2,7 @@
     width: 100%;
     display: flex;
     align-items: center;
-    background-color: #f0f0f0;
+    background-color: white;
 }
 
 .main-content {
