--- a/front/src/css/pages/profile.css
+++ b/front/src/css/pages/profile.css
@@ -126,7 +126,7 @@ input {
 }
 
 .accordion-button {
-    background-color: #f0f0f0;
+    background-color: white;
     border: none;
     padding: 0.5rem;
     cursor: pointer;
