--- a/front/src/css/pages/emailsignin.css
+++ b/front/src/css/pages/emailsignin.css
@@ -3,6 +3,7 @@
     display: flex;
     align-items: center;
     background-color: white;
+    padding-top: 5rem;
 }
 
 .main-content {
@@ -33,7 +34,6 @@
 .insert-email {
     display: flex;
     padding-top: 2rem;
-    padding-bottom: 6rem;
     justify-content: center;
     align-items: center;
     width: 100%;
@@ -79,7 +79,7 @@
     width: 100%;
 }
 
-.submit-button {
+.submit-button-emailValidation {
     background-color: black;
     color: white;
     padding: 12px 24px;
@@ -87,10 +87,10 @@
     border-radius: 4px;
     cursor: pointer;
     transition: background-color 0.3s, color 0.3s;
-    width: 83.5%;
+    width: 74%;
 }
 
-.submit-button:hover {
+.submit-button-emailValidation:hover {
     background-color: white;
     color: black;
 }
